# megaton

./: .env.example  .gitignore  CHANGELOG.md  README.md  jupytext.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: CHEATSHEET.md  SearchResult_API.md  advanced.md  api-reference.md  changelog-archive.md  cheatsheet.md  cookbook.md  design.md  searchresult-api.md
megaton/: __init__.py  auth.py  bq.py  constants.py  dates.py  errors.py  files.py  ga3.py  ga4.py  gdrive.py  google_api.py  gsheet.py  os.py  retry_utils.py  run.py  searchconsole.py  start.py  state.py  utils.py  widgets.py
megaton/auth/: __init__.py  google_auth.py  provider.py
megaton/install/: bigquery.py  ga4.py  install_bigquery.py  install_ga4.py
megaton/recipes/: __init__.py  config_loader.py
megaton/services/: bq_service.py  gsc_service.py  sheets_service.py
megaton/transform/: __init__.py  classify.py  ga4.py  table.py  text.py  traffic.py
megaton/ui/: widgets.py
megaton/update/: google_api_core.py
notebooks/: corp.ipynb  dei.ipynb  example-megaton.ipynb  project_x.ipynb  shibuya.ipynb  shibuya_dashboard.ipynb  slqm.ipynb  test-megaton.ipynb
tests/: conftest.py  test_auth.py  test_auth_provider.py  test_auto_install.py  test_bq_core_extra.py  test_bq_state_api.py  test_clean_parameter.py  test_config_loader.py  test_dates.py  test_errors_and_init.py  test_ga4_property_show.py  test_ga4_report_core.py  test_ga4_report_retry.py  test_ga4_state_and_run.py  test_gsc_service.py  test_gsheet_core.py  test_gsheet_retry_resolvers.py  test_gsheet_timeout.py  test_megaton_auth_bridge.py  test_normalize_queries.py  test_phase0_regressions.py  test_programmatic_api.py  test_report_dates_to_sheet.py  test_report_month_window.py  test_report_prep.py  test_report_result.py  test_report_run_multi.py  test_report_run_ranges.py  test_report_show_download.py  test_retry_utils.py  test_run_all.py  test_run_sites_old.py  test_sc_wrapper.py  test_search_apply_if.py  test_search_dimension_filter.py  test_search_filter.py  test_search_result.py  test_sheet_namespace.py  test_sheet_save_options.py  test_sheets_read.py  (+12 more)
